# sparse_autoencoder

./: .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
Experiments/Machine_mindset/: Generate_Prompts.ipynb
Experiments/Machine_mindset/dataset/prompt_1000/: decision_feeling.parquet  decision_thinking.parquet  energy_extraversion.parquet  energy_introversion.parquet  execution_judging.parquet  execution_perceiving.parquet  information_intuition.parquet  information_sensing.parquet
sae-viewer/: .gitignore  README.md  package-lock.json  package.json
sae-viewer/src/: App.css  App.tsx  autoencoder_registry.tsx  feed.tsx  index.html  interpAPI.ts  types.ts  welcome.tsx
sae-viewer/src/components/: featureInfo.tsx  featureSelect.tsx  histogram.tsx  tokenAblationmap.tsx  tokenHeatmap.tsx  tooltip.tsx
sparse_autoencoder/: __init__.py  explanations.py  kernels.py  loss.py  model.py  paths.py  train.py
